<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NetworkFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="154dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/bluetooth_Text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/bt_status"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bt_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/wifi_state"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="32dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="68dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/ident_bt"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:text="@string/idbr_notf"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                tools:layout_editor_absoluteY="731dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="29dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/cellular_text"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/bt_status"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cell_status"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/wifi_state"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                        app:layout_constraintStart_toEndOf="@+id/textView2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="63dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                tools:layout_editor_absoluteY="731dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="46dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/wifi_text"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/wifi_status"
                        android:layout_width="39dp"
                        android:layout_height="31dp"
                        android:text="@string/wifi_state"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                        app:layout_constraintStart_toEndOf="@+id/textView2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/send_data_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="158dp"
                android:text="0 kb/s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="132dp"
                android:text="@string/sendText"
                app:layout_constraintEnd_toStartOf="@+id/send_data_rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/receive_data_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="158dp"
                android:text="0 kb/s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="343dp"
                android:text="@string/receiveText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/receive_data_rate"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>