<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StorageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="408dp"
            android:layout_height="154dp"
            android:layout_marginTop="119dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="101dp"
            android:layout_marginBottom="20dp"
            android:text="@string/total"
            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/total_state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="20dp"
            android:text="@string/free"
            app:layout_constraintBottom_toTopOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="343dp"
            android:text="@string/used"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/total_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginTop="61dp"
            android:layout_marginBottom="20dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/free_state"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/free_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="103dp"
            android:layout_marginBottom="20dp"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/used_state"
            app:layout_constraintStart_toEndOf="@+id/textView13" />

        <TextView
            android:id="@+id/used_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="183dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/free_state" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>